# server/src/main/kotlin/cloud/robots/bridge/server/controller/ServerController.kt
@@ -3,6 +3,7 @@ package cloud.robots.bridge.server.controller
 import cloud.robots.bridge.server.exceptions.MissingParametersException
 import cloud.robots.bridge.server.model.*
 import cloud.robots.bridge.server.service.SubscriberService
+import cloud.robots.bridge.server.utils.GetDateTime
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.*
@@ -14,8 +15,12 @@ class ServerController(val subscriberService: SubscriberService) {
   companion object {
     const val SUBSCRIBE_PATH = "/subscribe/"
     const val GET_SUBSCRIBER_PATH = SUBSCRIBE_PATH + "{id}"
+
     const val PUBLISH_PATH = "/publish/"
     const val PUSH_MESSAGE_PATH = PUBLISH_PATH + "{topic}"
+
+    const val MESSAGES_PATH = "/messages/"
+    const val GET_MESSAGES_PATH = MESSAGES_PATH + "{subscriber}"
   }
 
   @RequestMapping(value = SUBSCRIBE_PATH, method = arrayOf(RequestMethod.PUT))
@@ -48,4 +53,12 @@ class ServerController(val subscriberService: SubscriberService) {
     val message = subscriberService.message(publishRequest.subscriber, topic, publishRequest.text)
     return PublishResponse(message.id)
   }
+
+  @RequestMapping(value = GET_MESSAGES_PATH, method = arrayOf(RequestMethod.GET))
+  @ResponseBody()
+  fun getMessages(@PathVariable subscriber: String) = MessagesResponse(subscriber,
+      subscriberService.readMessages(subscriber).map {
+        ReadableMessage(it.fromSubscriber, it.text, it.topic, GetDateTime.getUTCDate(it.created))
+      }.toTypedArray())
 }
+
