# server/src/main/kotlin/cloud/robots/bridge/server/model/MessagesResponse.kt
@@ -1,0 +1,3 @@
+package cloud.robots.bridge.server.model
+
+data class MessagesResponse(val subscriber : String = "", val messages : Array<ReadableMessage> = arrayOf<ReadableMessage>())
